// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> snapshot should match snapshot 1`] = `
<ButtonGroup>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <Button
        className="md-button-pill-wrapper"
        color="default"
        data-disabled-outline={false}
        data-grown={false}
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        softDisabled={false}
        variant="primary"
      >
        <mdc-button
          class="md-button-pill-wrapper"
          data-disabled-outline={false}
          data-grown={false}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          Example A
        </mdc-button>
      </Button>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <Button
        className="md-button-circle-wrapper"
        color="default"
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        variant="primary"
      >
        <mdc-button
          class="md-button-circle-wrapper"
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          A
        </mdc-button>
      </Button>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot when spaced 1`] = `
<ButtonGroup
  spaced={true}
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={false}
    data-spaced={true}
  >
    <ButtonPill
      key="0"
    >
      <Button
        className="md-button-pill-wrapper"
        color="default"
        data-disabled-outline={false}
        data-grown={false}
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        softDisabled={false}
        variant="primary"
      >
        <mdc-button
          class="md-button-pill-wrapper"
          data-disabled-outline={false}
          data-grown={false}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          Example A
        </mdc-button>
      </Button>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <Button
        className="md-button-circle-wrapper"
        color="default"
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        variant="primary"
      >
        <mdc-button
          class="md-button-circle-wrapper"
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          A
        </mdc-button>
      </Button>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with aria-label 1`] = `
<ButtonGroup
  aria-label="my aria label"
>
  <div
    aria-label="my aria label"
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <Button
        className="md-button-pill-wrapper"
        color="default"
        data-disabled-outline={false}
        data-grown={false}
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        softDisabled={false}
        variant="primary"
      >
        <mdc-button
          class="md-button-pill-wrapper"
          data-disabled-outline={false}
          data-grown={false}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          Example A
        </mdc-button>
      </Button>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <Button
        className="md-button-circle-wrapper"
        color="default"
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        variant="primary"
      >
        <mdc-button
          class="md-button-circle-wrapper"
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          A
        </mdc-button>
      </Button>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with className 1`] = `
<ButtonCircle
  className="example-class"
>
  <Button
    className="md-button-circle-wrapper example-class"
    color="default"
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
    size={40}
    variant="primary"
  >
    <mdc-button
      class="md-button-circle-wrapper example-class"
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Button>
</ButtonCircle>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with id 1`] = `
<ButtonCircle
  id="example-id"
>
  <Button
    className="md-button-circle-wrapper"
    color="default"
    id="example-id"
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
    size={40}
    variant="primary"
  >
    <mdc-button
      class="md-button-circle-wrapper"
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      suppressHydrationWarning={true}
    />
  </Button>
</ButtonCircle>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with orientation = vertical 1`] = `
<ButtonGroup
  orientation="vertical"
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="vertical"
    data-round={false}
    data-separator={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <Button
        className="md-button-pill-wrapper"
        color="default"
        data-disabled-outline={false}
        data-grown={false}
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        softDisabled={false}
        variant="primary"
      >
        <mdc-button
          class="md-button-pill-wrapper"
          data-disabled-outline={false}
          data-grown={false}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          Example A
        </mdc-button>
      </Button>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <Button
        className="md-button-circle-wrapper"
        color="default"
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        variant="primary"
      >
        <mdc-button
          class="md-button-circle-wrapper"
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          A
        </mdc-button>
      </Button>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with role 1`] = `
<ButtonGroup
  role="tablist"
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={false}
    data-spaced={false}
    role="tablist"
  >
    <ButtonPill
      key="0"
    >
      <Button
        className="md-button-pill-wrapper"
        color="default"
        data-disabled-outline={false}
        data-grown={false}
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        softDisabled={false}
        variant="primary"
      >
        <mdc-button
          class="md-button-pill-wrapper"
          data-disabled-outline={false}
          data-grown={false}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          Example A
        </mdc-button>
      </Button>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <Button
        className="md-button-circle-wrapper"
        color="default"
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        variant="primary"
      >
        <mdc-button
          class="md-button-circle-wrapper"
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          A
        </mdc-button>
      </Button>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with round 1`] = `
<ButtonGroup
  round={true}
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={true}
    data-separator={false}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <Button
        className="md-button-pill-wrapper"
        color="default"
        data-disabled-outline={false}
        data-grown={false}
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        softDisabled={false}
        variant="primary"
      >
        <mdc-button
          class="md-button-pill-wrapper"
          data-disabled-outline={false}
          data-grown={false}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          Example A
        </mdc-button>
      </Button>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <Button
        className="md-button-circle-wrapper"
        color="default"
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        variant="primary"
      >
        <mdc-button
          class="md-button-circle-wrapper"
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          A
        </mdc-button>
      </Button>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with separator 1`] = `
<ButtonGroup
  separator={true}
>
  <div
    className="md-button-group-wrapper"
    data-compressed={false}
    data-orientation="horizontal"
    data-round={false}
    data-separator={true}
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <Button
        className="md-button-pill-wrapper"
        color="default"
        data-disabled-outline={false}
        data-grown={false}
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        softDisabled={false}
        variant="primary"
      >
        <mdc-button
          class="md-button-pill-wrapper"
          data-disabled-outline={false}
          data-grown={false}
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          Example A
        </mdc-button>
      </Button>
    </ButtonPill>
    <ButtonCircle
      key="1"
    >
      <Button
        className="md-button-circle-wrapper"
        color="default"
        onClick={[Function]}
        onPointerDown={[Function]}
        onPointerUp={[Function]}
        size={40}
        variant="primary"
      >
        <mdc-button
          class="md-button-circle-wrapper"
          onPointerDown={[Function]}
          onPointerUp={[Function]}
          suppressHydrationWarning={true}
        >
          A
        </mdc-button>
      </Button>
    </ButtonCircle>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup /> snapshot should match snapshot with style 1`] = `
<ButtonCircle
  style={
    Object {
      "color": "pink",
    }
  }
>
  <Button
    className="md-button-circle-wrapper"
    color="default"
    onClick={[Function]}
    onPointerDown={[Function]}
    onPointerUp={[Function]}
    size={40}
    style={
      Object {
        "color": "pink",
      }
    }
    variant="primary"
  >
    <mdc-button
      class="md-button-circle-wrapper"
      onPointerDown={[Function]}
      onPointerUp={[Function]}
      style={
        Object {
          "color": "pink",
        }
      }
      suppressHydrationWarning={true}
    />
  </Button>
</ButtonCircle>
`;
